THRIFT-2773: java - fixed oneway support while using TServiceClient

Client: java
Patch: Konrad Grochowski

new method for oneway call provided by TServiceClient
and compiler will now use it

This closes #241